feat: JWT token generation
