# docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /v1
 definitions:
+  main.CreateTokenPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 72
+        minLength: 3
+        type: string
+    required:
+    - email
+    - password
+    type: object
   main.RegisterUserPayload:
     properties:
       email:
@@ -146,6 +159,48 @@ info:
   termsOfService: https://github.com/biboyqg/social/blob/main/TERMS_OF_SERVICE.md
   title: Social Network API
 paths:
+  /authentication/token:
+    post:
+      consumes:
+      - application/json
+      description: Create a token for a user
+      parameters:
+      - description: Token credentials
+        in: body
+        name: token
+        required: true
+        schema:
+          $ref: '#/definitions/main.CreateTokenPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create Token
+      tags:
+      - Authentication
   /authentication/user:
     post:
       consumes:
